--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(.check_replace_argument)
 export(.data)
 export(.env)
 export(affirm_close)
+export(affirm_export_excel)
 export(affirm_init)
 export(affirm_report_gt)
 export(affirm_report_raw_data)
