--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(.env)
 export(affirm_close)
 export(affirm_export_excel)
 export(affirm_init)
+export(affirm_range)
 export(affirm_report_gt)
 export(affirm_report_raw_data)
 export(affirm_true)
