--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,8 @@ export(.env)
 export(affirm_close)
 export(affirm_export_excel)
 export(affirm_init)
+export(affirm_na)
+export(affirm_not_na)
 export(affirm_report_gt)
 export(affirm_report_raw_data)
 export(affirm_true)
