--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export("%>%")
 export(.check_replace_argument)
 export(.data)
 export(.env)
+export(affirm_class)
 export(affirm_close)
 export(affirm_export_excel)
 export(affirm_init)
