--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,9 @@ export(.env)
 export(affirm_close)
 export(affirm_export_excel)
 export(affirm_init)
+export(affirm_na)
 export(affirm_no_dupes)
+export(affirm_not_na)
 export(affirm_range)
 export(affirm_report_gt)
 export(affirm_report_raw_data)
