--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(.env)
 export(affirm_class)
 export(affirm_close)
 export(affirm_export_excel)
+export(affirm_false)
 export(affirm_init)
 export(affirm_na)
 export(affirm_no_dupes)
