adding option to include variable labels in output report files

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,13 +6,13 @@ export(.data)
 export(.env)
 export(affirm_class)
 export(affirm_close)
-export(affirm_export_excel)
 export(affirm_false)
 export(affirm_init)
 export(affirm_na)
 export(affirm_no_dupes)
 export(affirm_not_na)
 export(affirm_range)
+export(affirm_report_excel)
 export(affirm_report_gt)
 export(affirm_report_raw_data)
 export(affirm_true)
