--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,13 +18,15 @@ BugReports: https://github.com/pcctc/affirm/issues
 Depends: 
     R (>= 4.1)
 Imports: 
-    base64enc (>= 0.1.3),
+    base64enc (>= 0.1-3),
     cli (>= 3.6.1),
     dplyr (>= 1.1.2),
     gt (>= 0.9.0),
     htmltools (>= 0.5.5),
-    openxlsx,
-    rlang (>= 1.1.1)
+    openxlsx (>= 4.2.5.2),
+    readr,
+    rlang (>= 1.1.1),
+    tibble (>= 3.2.1)
 Suggests: 
     knitr,
     rmarkdown,
