ready for review

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(.check_replace_argument)
 export(.data)
 export(.env)
 export(affirm_class)
+export(affirm_clean_join)
 export(affirm_close)
 export(affirm_false)
 export(affirm_init)
