--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(affirm_values)
 export(all_of)
 export(any_of)
 export(as_tibble)
+export(construct_report_listing)
 export(contains)
 export(ends_with)
 export(everything)
