--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ export(everything)
 export(expr)
 export(last_col)
 export(matches)
+export(mutate)
 export(num_range)
 export(one_of)
 export(prepend_df_name)
