--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,7 +21,7 @@ Imports:
     base64enc (>= 0.1-3),
     cli (>= 3.6.1),
     dplyr (>= 1.1.2),
-    glue,
+    glue (>= 1.6.2),
     gt (>= 0.9.0),
     htmltools (>= 0.5.5),
     openxlsx (>= 4.2.5.2),
