--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,7 +24,7 @@ Imports:
     glue (>= 1.6.2),
     gt (>= 0.9.0),
     htmltools (>= 0.5.5),
-    openxlsx (>= 4.2.5.2),
+    openxlsx2 (>= 1.1),
     readr,
     rlang (>= 1.1.1),
     tibble (>= 3.2.1)
