--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,14 +25,14 @@ Imports:
     gt (>= 0.9.0),
     htmltools (>= 0.5.5),
     openxlsx2 (>= 1.1),
-    readr,
-    rlang (>= 1.1.1),
-    tibble (>= 3.2.1)
+    readr (>= 2.1.4),
+    rlang (>= 1.1.1)
 Suggests: 
     knitr,
     rmarkdown,
     testthat (>= 3.0.0),
-    webshot2 (>= 0.1.0)
+    webshot2 (>= 0.1.0),
+    tibble (>= 3.2.1)
 VignetteBuilder: 
     knitr
 Config/testthat/edition: 3
